--- a/aluroni-routes/src/index.css
+++ b/aluroni-routes/src/index.css
@@ -3,6 +3,7 @@
    License: none (public domain)
 */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Montserrat:wght@300&display=swap");
 
 body {
   background-color: #f6f6f6;
@@ -11,4 +12,10 @@ body {
 * {
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+}
+
+#root > main.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
