--- a/ignite-react-basics/src/global.css
+++ b/ignite-react-basics/src/global.css
@@ -8,7 +8,12 @@
   --gray-800: #202024;
   --gray-900: #121214;
   --green: #00875f;
-  --green-300: #00B37E;
+  --green-300: #00b37e;
+}
+
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green);
 }
 
 * {
@@ -18,13 +23,16 @@
 }
 
 body {
-    background-color: var(--gray-900);
-    color: var(--gray-300);
-    -webkit-font-smoothing: antialiased
+  background-color: var(--gray-900);
+  color: var(--gray-300);
+  -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, button {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 1rem;
+body,
+input,
+textarea,
+button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
 }
